--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     <h1>Welcome to University!</h1>
-    <p>You are Guest. </p>
+    {% if request.user.username %}
+        <p>You are {{ request.user.username }} <a href="{% url 'logout' %}"><button>Logout</button></a></p>
+    {% else %}
+        <p>You are Guest. Please, <a href="{% url 'login' %}">log in</a></p>
+    {% endif %}
 </body>
 </html>
