--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -1,8 +1,10 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Home page</title>
+    <link rel="stylesheet" href={% static "bootstrap/bootstrap.min.css" %}>
 </head>
 <body>
     <h1>Welcome to University!</h1>
