--- a/templates/registration/registration.html
+++ b/templates/registration/registration.html
@@ -1,18 +1,31 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>Sign up</title>
+    <link rel="stylesheet" href={% static "bootstrap/bootstrap.min.css" %}>
+    <link rel="stylesheet" href={% static "core.css" %}>
 </head>
 <body>
-    <h1>Registration</h1>
-    <form method="post">{% csrf_token %}
+    <div class="container">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <div class="label-mine">
+                <h1>Registration</h1>
+            </div>
+            <div class="text-right">
+            <form method="post">{% csrf_token %}
             {% for field in form %}
                 <p>{{ field.name }}:
-                    {{ field.errors }}
+                    <code>{{ field.errors }}</code>
                     {{ field }} </p>
             {% endfor %}
-        <button type="submit">Save me</button>
-    </form>
+                <button type="submit" class="btn btn-success">Save me</button>
+            </form>
+            </div>
+        </div>
+        <div class="col-md-2"></div>
+    </div>
 </body>
 </html>
