--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -17,11 +17,13 @@
             <div class="text-center">
                 {% if request.user.username %}
                     <div class="text-right">
-                    <p>You are {{ request.user.username }} <a href="{% url 'logout' %}"><button type="button" class="btn btn-primary">Logout</button></a></p>
+                    <p class="text-muted">You are {{ request.user.username }} <a href="{% url 'logout' %}"><button type="button" class="btn btn-primary">Logout</button></a></p>
                     </div>
                 {% else %}
                     <p>You are Guest. Please, <ins><a href="{% url 'login' %}">sign in</a></ins> or <ins><a href="{% url 'reg' %}">sign up</a></ins>.</p>
                 {% endif %}
+                <h4>Would you like work with:</h4>
+                <p><ins><a href={% url "students:students" %}>Students</a></ins></p>
             </div>
         </div>
         <div class="col-md-2"></div>
