--- a/templates/registration/success_registration.html
+++ b/templates/registration/success_registration.html
@@ -17,6 +17,9 @@
             <div class="text-center">
                 <ins><a href="{% url "home_page" %}">Home page</a></ins>
             </div>
+           <div class="label-mine">
+                <p class="text-info"><strong>Have a nice day</strong></p>
+            </div>
         </div>
         <div class="col-md-2"></div>
     </div>
