--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -24,6 +24,9 @@
                 <button type="submit" class="btn btn-success">Log in</button>
             </form>
             </div>
+        <div class="label-mine">
+            <p><strong><a href="{% url 'home_page' %}">Back to home page</a></strong></p>
+        </div>
         </div>
         <div class="col-md-2"></div>
     </div>
