Create delete-form for groups

--- a/group/templates/groups_list.html
+++ b/group/templates/groups_list.html
@@ -20,7 +20,8 @@
             <td>{{ group.student_set.count }}</td>
             <td>{{ group.elder }}</td>
             <td><button type="button" class="btn btn-info"><a href="{% url 'groups:info' group.id %}">View</a></button>
-            <button type="button" class="btn btn-warning"><a href="{% url 'groups:update' group.id %}">Update</a></button></td>
+            <button type="button" class="btn btn-warning"><a href="{% url 'groups:update' group.id %}">Update</a></button>
+            <button type="button" class="btn btn-danger"><a href="{% url 'groups:delete' group.id %}">Delete</a></button></td>
         </tr>
     {% endfor %}
     </table>
