--- a/group/templates/groups_list.html
+++ b/group/templates/groups_list.html
@@ -25,6 +25,7 @@
         </tr>
     {% endfor %}
     </table>
+    <button type="button" class="btn btn-default btn-lg btn-block"><a href="{% url 'groups:create' %}">Create new group</a></button>
 {% else %}
     <p>No groups are available.</p>
 {% endif %}
