Create create-form for students

--- a/student/templates/students_list.html
+++ b/student/templates/students_list.html
@@ -17,4 +17,5 @@
             <p>No students are available.</p>
         {% endif %}
     </div>
+    <button type="button" class="btn btn-default btn-lg btn-block"><a href="{% url 'students:create' %}">Add new student</a></button>
 {% endblock %}
