--- a/student/templates/students_list.html
+++ b/student/templates/students_list.html
@@ -17,16 +17,16 @@
                 <tr>
                     <td>{{ student.student_id }}</td>
                     <td>{{ student.last_name }}</td>
-                    <td><button type="button" class="btn btn-info"><a href="{% url 'students:info' student.student_id %}">View</a></button>
-                    <button type="button" class="btn btn-warning"><a href="{% url 'students:update' student.student_id %}">Update</a></button>
-                    <button type="button" class="btn btn-danger"><a href="{% url 'students:delete' student.student_id %}">Delete</a></button></td>
+                    <td><button type="button" class="btn btn-info" onclick="location.href='{% url 'students:info' student.student_id %}'">View</button>
+                    <button type="button" class="btn btn-warning" onclick="location.href='{% url 'students:update' student.student_id %}'">Update</button>
+                    <button type="button" class="btn btn-danger" onclick="location.href='{% url 'students:delete' student.student_id %}'">Delete</button></td>
                 </tr>
             {% endfor %}
         </table>
     {% else %}
         <p>No students are available.</p>
     {% endif %}
-    <button type="button" class="btn btn-default btn-lg btn-block"><a href="{% url 'students:create' %}">Add new student</a></button>
+    <button type="button" class="btn btn-default btn-lg btn-block" onclick="location.href='{% url 'students:create' %}'">Add new student</button>
 {% endblock %}
 
 
