Fixed errors in the forms

--- a/group/templates/groups_info.html
+++ b/group/templates/groups_info.html
@@ -6,6 +6,7 @@
     <div class="label-mine">
         <h1>Students in {{ group.group_name }}</h1>
     </div>
+    <div class="basic-mine">
     <table class="table" border = "1">
         <tr>
             <th>Student's id</th>
@@ -24,4 +25,5 @@
             </tr>
         {% endfor %}
     </table>
+    </div>
 {% endblock %}
