--- a/student/templates/students_info.html
+++ b/student/templates/students_info.html
@@ -6,7 +6,7 @@
     <div class="label-mine">
         <h1>Information about student {{ student.last_name }}</h1>
     </div>
-    <div class="text-center">
+    <div class="basic-mine">
         <p>Last name: {{ student.last_name }}</p>
         <p>First name: {{ student.first_name }}</p>
         <p>Middle name: {{ student.middle_name }}</p>
