--- a/templates/basic.html
+++ b/templates/basic.html
@@ -14,11 +14,11 @@
         <div class="col-md-8">
              <div class="text-right">
                 <p class="text-muted">{{ request.user.username }} <a href="{% url 'logout' %}"><button type="button" class="btn btn-primary">Logout</button></a></p>
-            </div>
+             </div>
             {% block body %}
             {% endblock %}
             <div class="label-mine">
-                <p><strong><a href="{% url 'home_page' %}">Back to home page</a></strong></p>
+                <p><strong><a href="{% url 'home_page' %}"><h4>Back to home page</h4></a></strong></p>
             </div>
         </div>
         <div class="col-md-2"></div>
