--- a/static/core.css
+++ b/static/core.css
@@ -2,5 +2,19 @@
     color: crimson;
     text-align: center;
     background: lightblue;
+    height: 50px;
 }
 
+.form-mine{
+    margin-left: 30%;
+    margin-right: 25%;
+    margin-bottom: 10%;
+    margin-top: 10%;
+    text-align: center;
+}
+
+.basic-mine{
+    margin-bottom: 10%;
+    margin-top: 10%;
+    text-align: center;
+}
