--- a/student/templates/create_student.html
+++ b/student/templates/create_student.html
@@ -6,8 +6,14 @@
     <div class="label-mine">
         <h1>Create new student</h1>
     </div>
-    <form action="" method="post">{% csrf_token %}
-        {{ form.as_p }}
+    <div class="form-mine">
+    <form method="post">{% csrf_token %}
+        {% for field in form %}
+            <p>{{ field.name }}:
+                {{ field }}
+                <code>{{ field.errors }}</code></p>
+        {% endfor %}
         <button type="submit" class="btn btn-success">Create</button>
     </form>
+    </div>
 {% endblock %}
