--- a/student/templates/students_list.html
+++ b/student/templates/students_list.html
@@ -6,6 +6,7 @@
     <div class="label-mine">
         <h1>Students List</h1>
     </div>
+    <div class="basic-mine">
     {% if object_list %}
         <table class="table" border = "1">
             <tr>
@@ -27,6 +28,7 @@
         <p>No students are available.</p>
     {% endif %}
     <button type="button" class="btn btn-default btn-lg btn-block" onclick="location.href='{% url 'students:create' %}'">Add new student</button>
+    </div>
 {% endblock %}
 
 
