--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -14,12 +14,11 @@
             <div class="label-mine">
                 <h1>Sign in to continue</h1>
             </div>
-            <div class="text-right">
+            <div class="form-mine">
             <form method="post">{% csrf_token %}
                     {% for field in form %}
-                        <p>{{ field.name }}:
-                            {{ field }}
-                        <code>{{ field.errors }}</code></p>
+                        <input class="form-control" placeholder={{ field.name }} for={{ field }}
+                        <p><code>{{ field.errors }}</code></p>
                     {% endfor %}
                 <button type="submit" class="btn btn-success">Log in</button>
             </form>
@@ -32,3 +31,4 @@
     </div>
 </body>
 </html>
+
