--- a/static/core.css
+++ b/static/core.css
@@ -17,4 +17,15 @@
     margin-bottom: 10%;
     margin-top: 10%;
     text-align: center;
+    height: 300px;
+}
+
+.core-mine{
+    margin-bottom: 20%;
+    margin-top:100px;
+    margin-left: -20%;
+    margin-right: -19%;
+    text-align: center;
+    background: lightblue;
+    height: 200px;
 }
