Create UserProfile model

--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -11,6 +11,8 @@
         <p>First name: {{ request.user.first_name }}</p>
         <p>Last name: {{ request.user.last_name }}</p>
         <p>Email: {{ request.user.email }}</p>
+        <p>Address: {{ request.user.address }}</p>
+        <p>Mobile phone: {{ request.user.mobile_phone }}</p>
     </div>
 {% endblock %}
 
