--- a/student/templates/students_list.html
+++ b/student/templates/students_list.html
@@ -18,9 +18,9 @@
                 <tr>
                     <td>{{ student.student_id }}</td>
                     <td>{{ student.last_name }}</td>
-                    <td><button type="button" class="btn btn-info" onclick="location.href='{% url 'students:info' student.student_id %}'">View</button>
-                    <button type="button" class="btn btn-warning" onclick="location.href='{% url 'students:update' student.student_id %}'">Update</button>
-                    <button type="button" class="btn btn-danger" onclick="location.href='{% url 'students:delete' student.student_id %}'">Delete</button></td>
+                    <td><button type="button" class="btn btn-info" onclick="location.href='{% url 'students:info' student.id %}'">View</button>
+                    <button type="button" class="btn btn-warning" onclick="location.href='{% url 'students:update' student.id %}'">Update</button>
+                    <button type="button" class="btn btn-danger" onclick="location.href='{% url 'students:delete' student.id %}'">Delete</button></td>
                 </tr>
             {% endfor %}
         </table>
